--- a/templates/tab_3.html
+++ b/templates/tab_3.html
@@ -891,7 +891,7 @@
 
       },
       error : function(response, textStatus, HTTPError){
-        alert("Check to make sure IDEAA server is running.");
+        alert("Check to make sure GAILA server is running.");
         console.log('error creating inverse');
         console.log(response.responseText);
       }
