--- a/templates/tab_1.html
+++ b/templates/tab_1.html
@@ -94,9 +94,9 @@
     <br>
     <div class="input-group" style="margin: 1%">
         <span class="input-group-addon" id="basic-addon1">Output directory</span>
-        <input type="text" class="form-control" id="outDirPath" value="Default IDEAA Archive">
+        <input type="text" class="form-control" id="outDirPath" value="Default GAILA Archive">
         <span class="input-group-btn">
-          <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to your output directory. Clicking on your url bar will highlight the directory path, copy paste that into this text box.  Will default to the IDEAA/Archive folder.')">?</button>
+          <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to your output directory. Clicking on your url bar will highlight the directory path, copy paste that into this text box.  Will default to the GAILA/Archive folder.')">?</button>
         </span>
     </div>
     <div class="input-group" style="margin: 1%">
