Adds autoscroll to the progress window

--- a/templates/tab_1.html
+++ b/templates/tab_1.html
@@ -209,6 +209,7 @@
 
     var rightSide = $(this).parent().siblings("#rightSide").first()
     rightSide.append("<div>Executing Function Now</div>")
+    rightSide.scrollTop(rightSide[0].scrollHeight);
     var startTime = new Date();
     givenRightsideAndDataObjSelectMGF(rightSide, serializedForm, function(err){
       if (err){
@@ -217,6 +218,7 @@
       }
       else{
         rightSide.append('<h3 style="color:green">Sucessfully parsed all MGF files</h3>');
+        rightSide.scrollTop(rightSide[0].scrollHeight);
         writeSummaryToFile(rightSide, serializedForm, function(err){});
       }
       that.attr('disabled', false);
