--- a/templates/tab_7.html
+++ b/templates/tab_7.html
@@ -132,6 +132,7 @@
 
     var rightSide = $(this).parent().siblings("#rightSide").first()
     rightSide.append("<div>Executing Function Now</div>")
+    rightSide.scrollTop(rightSide[0].scrollHeight);
     var startTime = new Date();
 
     // async.waterfall([
@@ -161,6 +162,7 @@
       function fast_parse(callback){
         rightSide.append("<div>Fast parsing XML file</div>");
         rightSide.append('<div style="color:blue">Please be patient as this may take a while.  Progress can be viewed in the command line window.</div>');
+        rightSide.scrollTop(rightSide[0].scrollHeight);
         $.ajax({
           type:"POST",
           url:"fast_parse",
@@ -170,12 +172,14 @@
           success : function(result){
             console.log(result);
             rightSide.append('<h3 style="color:green">XML parsed successfully without MGF. You can find the parsed xml the specified output folder.</h3>');
+            rightSide.scrollTop(rightSide[0].scrollHeight);
             writeSummaryToFile(rightSide, serializedForm, function(err){});
             return callback(null);
           },
           error: function(response, textStatus, HTTPError){
             console.log(response.responseText);
             rightSide.append('<div style="color:red">' + response.responseText + '</div>')
+            rightSide.scrollTop(rightSide[0].scrollHeight);
             return callback("error: " + response.responseText)
           }
         })
@@ -192,6 +196,7 @@
       }
       var difference = new Date() - startTime;
       rightSide.append("<div>MILLISECONDS TAKEN: " + difference + " <div>")
+      rightSide.scrollTop(rightSide[0].scrollHeight);
       that.attr('disabled', false);
       that.text('Click to submit');
     })
