--- a/templates/tab_5.html
+++ b/templates/tab_5.html
@@ -44,6 +44,7 @@
 
     var rightSide = $(this).parent().siblings("#rightSide").first()
     rightSide.append("<div><br>Starting protein count.  Status available in terminal window.</div>")
+    rightSide.scrollTop(rightSide[0].scrollHeight);
     var startTime = new Date();
 
     async.waterfall([
@@ -56,11 +57,13 @@
             console.log("Count protein complete.");
             console.log(result);
             rightSide.append("<h3 style=color:green>Count complete. </h3><br><div>" + result + "</div>");
+            rightSide.scrollTop(rightSide[0].scrollHeight);
             return callback(null);
           },
           error: function(response, textStatus, HTTPError){
             console.log(response.responseText);
             rightSide.append('<h3 style="color:red">' + response.responseText + '</h3>');
+            rightSide.scrollTop(rightSide[0].scrollHeight);
             return callback("error: " + response.responseText);
           }
         })
@@ -77,6 +80,7 @@
       }
       var difference = new Date() - startTime;
       rightSide.append("<div>MILLISECONDS TAKEN: " + difference + " <div>")
+      rightSide.scrollTop(rightSide[0].scrollHeight);
       that.attr('disabled', false);
       that.text('Click to submit');
     })
