--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -169,6 +169,7 @@
 	          },
 	          error: function(response, textStatus, HTTPError){
 	            rightSide.append('<h3 style="color:red">' + response.responseText + '</h3>')
+				rightSide.scrollTop(rightSide[0].scrollHeight);
 	            return callback("ERROR IN PASSING BACK FILE NAMES");
 	          }
 	        })
@@ -183,6 +184,7 @@
 	        }
 	        if (!fileArray.length){
 	          rightSide.append("<div>NO FILES TO WRITE!</div>")
+			  rightSide.scrollTop(rightSide[0].scrollHeight);
 	          return callback("NO FILES TO WRITE")
 	        }
 	        async.each(fileArray, function(elem, next){
@@ -192,6 +194,7 @@
 
 	          console.log("Parsing file");
 	          rightSide.append("<div>Began selecting from file " + elem + "</div>");
+			  rightSide.scrollTop(rightSide[0].scrollHeight);
 
 	          var tab_url = "";
 	          var plain_parsing = data["plain_parse"];
@@ -212,6 +215,7 @@
 	            success : function(result){
 	              console.log(result);
 	              rightSide.append("<div>Finished Selecting from file " + elem + "</div>");
+				  rightSide.scrollTop(rightSide[0].scrollHeight);
 	              return next(null)
 	            },
 	            error: function(response, textStatus, HTTPError){
@@ -226,17 +230,19 @@
 	      }
 	    ],
 	    function(err, result){
+		  var difference = new Date() - startTime;
+		  rightSide.append("<h4>MILLISECONDS TAKEN: " + difference + " <h4>")
+		  rightSide.scrollTop(rightSide[0].scrollHeight);
 	      if (err){
 	      	console.log(err);
       		if (typeof result == "undefined"){
                 alert("Check to make sure GAILA server is running.");
             }
       		if (err){
-        		rightSide.append('<h3 style="color:red">' + err + '</h3>')	
+        		rightSide.append('<h3 style="color:red">' + err + '</h3>')
+        		rightSide.scrollTop(rightSide[0].scrollHeight);
         	}
 	      }
-	      var difference = new Date() - startTime;
-	      rightSide.append("<h4>MILLISECONDS TAKEN: " + difference + " <h4>")
 	      return callbackOuter(err); //could be null
 	    })
 	  }
