Cleaning up wording in summary output and tabs.

--- a/templates/tab_1.html
+++ b/templates/tab_1.html
@@ -217,7 +217,7 @@
         console.log(err);
       }
       else{
-        rightSide.append('<h3 style="color:green">Sucessfully parsed all MGF files</h3>');
+        rightSide.append('<h3 style="color:green">Successfully parsed all MGF files</h3>');
         rightSide.scrollTop(rightSide[0].scrollHeight);
         writeSummaryToFile(rightSide, serializedForm, function(err){});
       }
