Adding ms2/ms3 suffix splitting.

--- a/templates/tab_6.html
+++ b/templates/tab_6.html
@@ -16,6 +16,20 @@
         <button class="btn btn-info" onclick="alert('Merge MS3 below boundary with MS2 above boundary')">?</button>
       </span>
     </div>
+    <div class="input-group" style="margin: 1%">
+      <span class="input-group-addon" id="basic-addon1">MS2 mgf file suffix</span>
+      <input type="text" class="form-control" id="ms2Suffix" value="_MS2[Node_2]">
+      <span class="input-group-btn">
+        <button class="btn btn-info" onclick="alert('Suffix for MS2 file created during the run')">?</button>
+      </span>
+    </div>
+        <div class="input-group" style="margin: 1%">
+      <span class="input-group-addon" id="basic-addon1">MS3 mgf file suffix</span>
+      <input type="text" class="form-control" id="ms3Suffix" value="_MS3[Node_5]">
+      <span class="input-group-btn">
+        <button class="btn btn-info" onclick="alert('Suffix for MS3 file created during the run')">?</button>
+      </span>
+    </div>
        <br>
         <div class="input-group" style="margin: 1%">
         <span class="input-group-addon" id="basic-addon1">Output directory</span>
