--- a/templates/tab_2.html
+++ b/templates/tab_2.html
@@ -93,8 +93,9 @@
       </span>
     </div>
     <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">GENE FILE</span>
-      <select class='form-control' id="geneFile">
+      <div class="input-group" style="margin: 1%">
+        <span class="input-group-addon" id="basic-addon1">GENE FILE</span>
+        <select class='form-control' id="geneFile" multiple="multiple">
         {% if gene_files %}
           {% for f in gene_files %}
             <option value={{f}}>{{f.rpartition('.')[0]}}</option>
@@ -104,7 +105,7 @@
       <span class="input-group-btn">
         <button class="btn btn-info" onclick="alert('This file is used to match spectra to specific runs.')">?</button>
       </span>
-
+     </div>
     </div>
 
     <div class="input-group" style="margin: 1%">
