--- a/templates/tab_4.html
+++ b/templates/tab_4.html
@@ -26,10 +26,14 @@
     </div>
     <div class="input-group" style="margin: 1%">
       <span class="input-group-addon" id="basic-addon1">GENE FILE</span>
-      <select class='form-control' id="geneFile">
+       <select class='form-control' id="geneFile" multiple="multiple">
         {% if gene_files %}
           {% for f in gene_files %}
-            <option value={{f}}>{{f.rpartition('.')[0]}}</option>
+            {% if loop.index == 1 %}
+              <option value={{f}} selected>{{f.rpartition('.')[0]}}</option>
+            {% else %}
+              <option value={{f}}>{{f.rpartition('.')[0]}}</option>
+            {% endif %}
           {% endfor %}
         {% endif %}
       </select>
